Points are back.